# upload2unimsrdm

./: .env.example  .gitignore  Advanced Usage.md  Developer.md  LICENSE  README.md  build_executable.sh  pyproject.toml  upload2unimsrdm.spec
src/upload2unimsrdm/: __init__.py  api_client.py  cli.py  conf.py  uploader.py  utils.py
tests/: __init__.py  test_init.py  test_utils.py
